@@ -1,0 +1,2 @@
+Jakob Voß <jakob.voss@gbv.de> <jakob@nichtich.de>
+Jakob Voß <jakob.voss@gbv.de> <voss@gbv.de>
