@@ -1,0 +1,1 @@
+<http://example.org/foo> a <http://example.org/bar> .
