@@ -1,0 +1,9 @@
+@prefix dct: <http://purl.org/dc/terms/> .
+@prefix skos: <http://www.w3.org/2004/02/skos/core#> .
+@prefix vann: <http://purl.org/vocab/vann/> .
+
+@base <http://example.org/> .
+
+<> a skos:ConceptScheme;
+    dct:title "a scheme"@en;
+    vann:preferredNamespacePrefix "example" .
